# ChangeLog for app-emulation/spice
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice/ChangeLog,v 1.55 2013/09/16 02:37:18 floppym Exp $

  16 Sep 2013; Mike Gilbert <floppym@gentoo.org> spice-0.12.3-r1.ebuild,
  spice-0.12.4.ebuild:
  Require a python-r1 compatible version of dev-python/pyparsing, bug 484906.

  12 Sep 2013; Michał Górny <mgorny@gentoo.org> spice-0.12.2.ebuild,
  spice-0.12.3-r1.ebuild, spice-0.12.4.ebuild:
  Replace virtual/pyparsing dep with dev-python/pyparsing. The split versions
  were removed and all in-tree versions support all impls now.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> spice-0.12.3-r1.ebuild,
  spice-0.12.4.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> spice-0.12.3-r1.ebuild:
  Stable for x86, wrt bug #477010

  24 Jul 2013; Agostino Sarubbo <ago@gentoo.org> spice-0.12.3-r1.ebuild:
  Stable for amd64, wrt bug #477010

*spice-0.12.4 (24 Jul 2013)

  24 Jul 2013; Doug Goldstein <cardoe@gentoo.org> +spice-0.12.4.ebuild:
  Version bump

*spice-0.12.3-r1 (24 Jul 2013)

  24 Jul 2013; Doug Goldstein <cardoe@gentoo.org>
  +files/spice-0.12.3-CVE-2013-4130.patch, +spice-0.12.3-r1.ebuild,
  -spice-0.12.3.ebuild:
  Fix CVE-2013-4130, bug #477010. Add epatch_user during the source prepare
  phase.

  06 Jun 2013; Doug Goldstein <cardoe@gentoo.org> spice-0.12.3.ebuild:
  Fix typo

  05 Jun 2013; Doug Goldstein <cardoe@gentoo.org> spice-0.12.3.ebuild:
  Improvements from Alphat-PC <alphatpc@gmail.com> as well as some other tweaks
  to make this package installer smoother. bug #472358

  04 Jun 2013; Doug Goldstein <cardoe@gentoo.org>
  -files/0.10.1-disable-werror.patch, -files/0.10.1-gold.patch,
  -files/54c660470a5aea19f799c5574cc0d4a707696712.patch, -spice-0.11.3.ebuild,
  -spice-0.12.0.ebuild:
  Remove older versions.

*spice-0.12.3 (04 Jun 2013)
