@@ -7,14 +7,26 @@ DIST spice-0.12.2.tar.bz2 1685684 SHA256 5654fac02f5568088ea01979088d539f4e95551
 DIST spice-0.12.3.tar.bz2 1606683 SHA256 bfd65e1c466524f9469cb58764904eeec1dae27c4901c4dbd0bf1ec419048546 SHA512 92d5871cd154d863ee54657e8064f6093bd5ab47e277a1398fed46b8592f44416d6d04be2d85a4ada90d4bfb5ef94dbc618a818219023416d3f8a82acbd3009e WHIRLPOOL bd431acefde4a3dd9c2fea5fa31c1ab2e1b2a34a1021d401510cb98307f8703922015d10db09795f26d514dbd49b147cd598dca2df16c784780530ab960a181b
 DIST spice-0.12.4.tar.bz2 1718655 SHA256 cf063e7df42e331a835529d2f613d8a01f8cb2963e8edaadf73a8d65c46fb387 SHA512 9867c2ace6205b606eef4a04a7e1fa0533c8d419cbb063edf4ded12db24f76237487d3e9dd57dec0f5b952eef399aa395d8591e2d82cab4d13e0d3ce6c7fba74 WHIRLPOOL 73c81bc1481c33512805c19934b4b4de92024cb2c5c0409ae34f2a926056ba970d2deb7ec4a13685e7b1854ca2c505f2b87b6ccd1e4d3454a65146c16c933de7
 EBUILD spice-0.12.2.ebuild 2122 SHA256 71c75ebbae44e2a4111d07cbf881d357c0b5d88cec322c896135f0c0e8dcda25 SHA512 d8aa46084c94d059dfdc8367bd1bd8f3623387c75f41c3ae92f1e32e2679b6834e85b3a5b69874242832ffba1ee03f8d4a71a07ce2524d5ac7fde5bbb3278ddc WHIRLPOOL a721d009ce3298b5398e583a31248a559b9e504bccdb7182051c1d1be1a3b3a04facd72182f31ced2c657391ee9c9f8cf65456dd034305318dbf881a99870e12
-EBUILD spice-0.12.3-r1.ebuild 2559 SHA256 2e71db224860fdae71eb770c4b3b3c88ff6832ee651a353b60fa24e24e906516 SHA512 ca736ca28058f75b0e574ec9d3052abd4b8452bd022e29d0dab1d9ca0dee6fb5bcc92c65c529d0148024c2d13280b35328ef9a3915e209b4d7eccaff2e61ba63 WHIRLPOOL 7634ea6c022d058acc72ce7c28905a3b9c1039fce27b047f702ff5e000a9ca98d0e17a21fb67acb72e826c257d98d591ee77641ac93fac93d7a4f6898525180b
-EBUILD spice-0.12.4.ebuild 2225 SHA256 f43f56910097c1b76d38470744c3e7faaf85fe579800b1eb403959c57dee0951 SHA512 526fa9f4f53afe8183a8db2d90d853f760b637b5feefb66247d579e9aaec92c4837c0fe17ec1934a74e3f980230b0f060553584c407e233550b3ef7ec62a03b4 WHIRLPOOL 31f230d2c12de210c69179160b308851c64eae310bf596bfae41204cdeb7556e99f8f21ab7f7a82e8c1f396038848790fa27f909333f90cdc8e8294a2b03a61c
-MISC ChangeLog 8912 SHA256 1813762f4e50bbbf16d60fc620facccefa1c80269612913379aa0df1d89372f8 SHA512 268044c9c46a395a74e16c858d28294d8580679056eb8cb18b72824babc5ab829c8a6f292ad9d23acdd1e77a41869dc281e21787743ab6717afc2ab6e59dff4e WHIRLPOOL 07d2536907486dcf14f6d5300c6d19b97eba6f1b0b09dab89bb57439dea59947ddb18821321c5947371fc4c1f2ee9ccfd92e68a0e3c3c92ae7326eaf4e4205da
+EBUILD spice-0.12.3-r1.ebuild 2588 SHA256 550626e858eb45aff784b59d605b045cf473b7e070f82249ea627bf28ba5e361 SHA512 2dc3921b27b58291c6407e3585a6a8eb3f9287c4bbcf6f726b52e1b0776cf8c4e284c0ad89320af6be0cc6d95e968e660640b0870803f125ec4812516ef2debc WHIRLPOOL d53c8d6d56f31ce60d39a493de13a3bafcc370f22b6d85a346ff3e19e2d39e7b7db17d2e1366d571fa1770a5985b385dc4079861f35ae9c3d23e1155db207d01
+EBUILD spice-0.12.4.ebuild 2254 SHA256 73a6097046d14c126c3754bad9e3d431da6388a765592b6eedde11545578163f SHA512 32a1149477ea8fc30bc1a377c33db122c163f37128ec6709952a4e44b96b27106a684caa767698e9ae0d1050be8b32befce60589af2f0390eed848f70a24a1d0 WHIRLPOOL 4d19d42781145c94822cbbcbd4ddfe92fe53ea59b7e41fb56e7cbed6fdc7711e49272dbb6b67eda0ea3eda918255f3463a33d9fdf0612a85cd0be3ce941f04af
+MISC ChangeLog 9073 SHA256 0ed80434ee5ddf149f4d6a7cafc34d7fc6817faed42ba210bac1df8b9efde36a SHA512 790450784e6ffc09338e6d9f06b4eb52342c283c5c34f37eccd0968747975d60c0b0929bdbc45864cc73f914bea96b1687e22863ce2881b92ac1279ad550b8ad WHIRLPOOL dab5ca369040446289916b4e38f9c63e3ce096c26db091d2fe79d29fac54b45d7a9b36ca97a37aaba499f26ebcf47293ca78d77a2b9c08e72f2ac716534b5829
 MISC metadata.xml 561 SHA256 ac20a9018d473e0ac3aa7e0cb80bc542dd1a9b704b843e09a17b16b706fa339f SHA512 bb22c2e14eca34330891a56add2a39a2debc65fb0d9d037fd4b27be15adf5be2667166fff123e0e5e3cb5e201b523172737f537d2258216106c1e2dd86703bae WHIRLPOOL da950e23ccd706f068478c1e7d4de70dc3c871f9784a55af8db5061ce28ecede29e6153b6325818a301b9cab10059d380e9c93881c9df75815cd5eaa1f3c8d66
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlI2buMACgkQC77qH+pIQ6RWkAD9E7lBO4yzBn4BhMLvhIJ/xN3n
-98ZGXMZRqykcwzHSDa0BAJzCk+tQtt27CNfGZTmFa3AyfyQ6G88/xjttpO4Eu71a
-=GtMP
+iQJ8BAEBCABmBQJSVOicXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOBOwQAKt8cyl+IYRkS3HpShDgYYl+
+PLLe2emjyEQAxIADibIQWL01DlQ61vmKlA5wwnYq3wRrUmFbUJGk/Yid6VDKnzLP
+WnisWj2BdP/JBte0zhNVDRAEu5swBHd2Ey914cHhs1VJsk/4PnPxgf87GpxTQyAJ
+LOhVAw+7cYUeb6G08chQNMNes6aWbDI/EO84cXcCccbY4IhSrxhKA3hDJTBm5dqU
+5IbmBq656lJ6G0qN7HOEi2kZdfa3ziKHpnWHEelSVAgOn82xH/KhUQabMFcNvpmS
+f7mfE1flMLWn1eaziNXJg7gnvpf2KxcSl8cTpfN0czbzxG29QE/k7rOuJkgRFIGW
+SRqBcR4nnsPShS9h8e+gqY/Cp2LOt2fmKnRzvL4CPjzOJPQX+gOVXl2+JUG1go/v
+eak4oqCgk2K0QaD7mmzhI6oTjBLVaMWDA5P5n6YErAruxx/gs1GiMb38T0ZqWvRw
+sDJrBP7pFSmtZgM+gJV7IXWSP4LXalI6Oo3mEKwJfzLQvY2hj6JrQssQifoT+jI4
+ZaMnwzSrXYomHHNuUdZgdlv2I4VM3Qhl2hWVQdzBxScr95e7axkeDyh3tUB41C86
+Y2KVyRCbTFas58nGs9lkJ82HO5ttlG+ht15UNwJSyLMK3crgGazE1nziZpRO2Hjt
+7bzc5+3o8hO2Dt7U9K7A
+=VF+8
 -----END PGP SIGNATURE-----
