@@ -1,0 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST protected_attributes-1.0.3.tar.gz 22130 SHA256 6631023c0dd5a9d781fbaaa940d5d9a0a239df39112d13c4b6e13890b6afe7b5 SHA512 ec0fe79b94b12a2f0a55c761f484c596c752c8b85ec9cebe33a6eb80019c9089c5af881073e406cdad493a3ae9dfc84dc47578ec2a5d6a80fd75edf8c49c65b5 WHIRLPOOL 318b35d62c64b104c5c5ee7595da8d6faf8cfea2f7d51220e4c8be6b164c0dc85d4f552ca61ca2c6a8e96a530f2b5703a073ef566e3ee0322b8023328112a922
+EBUILD protected_attributes-1.0.3.ebuild 829 SHA256 2c0938bb8cbb460de894ee04a3b13ef12c95b0561ac089b1706149ea14312f1b SHA512 51daa78f38d5da187d2da85acde79c32f303265ea45bbc28084eb6ad155d55f47835608703c1ddb014c4b478df87bbce56d4e2049d40129d61f1d90daa99f8d0 WHIRLPOOL 0710ff8caa8cd4b4b6b2d657388b09929656af0d1893b15e695d79c4615b16f265728626bbfc9626cadba6bb9457a8401711100a64f2b46983569a88b01b7785
+MISC ChangeLog 523 SHA256 c9ca9e3112b99f200d8d8cb853e38aa652ad4163a20aee0a031ad1820b75822a SHA512 f9418d2e5499b73568427ebedfc95cd41d278402309fb6c4aa304a20fcfbccff0a8da7bf887f0115ace12d9cf08ff56f80d94941cdb19b1905aa22862245ea6d WHIRLPOOL b64fe8febfb0a1054e38d1036f45da1812f5753d5538b2f355a73359fb44e43d2af4055e97acef2122f8d4aa0dca96967f48a522a5c9fd47e9d4a9485366698e
+MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlJU5oYACgkQiIP6VqMIqNe0MAD+K2QqWAHJrApS9Kdf+ZekswDU
+31Xn0mKrdhlU1ihBl8gA/3SfFEIdte9Y0iuhXhJBtu+GiMen7+Oqv6El/g/N1vf8
+=cxuP
+-----END PGP SIGNATURE-----
