@@ -1,5 +1,5 @@
 DEFINED_PHASES=configure install prepare setup
-DEPEND=virtual/pkgconfig >=dev-python/pyparsing-1.5.6-r2 || ( dev-lang/python:2.7 dev-lang/python:2.6 virtual/pypy:2.0 ) >=x11-libs/pixman-0.17.7 >=dev-libs/glib-2.22:2 media-libs/alsa-lib >=media-libs/celt-0.5.1.1:0.5.1 dev-libs/openssl virtual/jpeg sys-libs/zlib sasl? ( dev-libs/cyrus-sasl ) smartcard? ( >=app-emulation/libcacard-0.1.2 ) client? ( >=x11-libs/libXrandr-1.2 x11-libs/libX11 x11-libs/libXext >=x11-libs/libXinerama-1.0 x11-libs/libXfixes x11-libs/libXrender )
+DEPEND=virtual/pkgconfig || ( ( dev-lang/python:2.7 >=dev-python/pyparsing-1.5.6-r2[python_targets_python2_7(-),python_single_target_python2_7(+)] ) ( dev-lang/python:2.6 >=dev-python/pyparsing-1.5.6-r2[python_targets_python2_6(-),python_single_target_python2_6(+)] ) ( virtual/pypy:2.0 >=dev-python/pyparsing-1.5.6-r2[python_targets_pypy2_0(-),python_single_target_pypy2_0(+)] ) ) >=x11-libs/pixman-0.17.7 >=dev-libs/glib-2.22:2 media-libs/alsa-lib >=media-libs/celt-0.5.1.1:0.5.1 dev-libs/openssl virtual/jpeg sys-libs/zlib sasl? ( dev-libs/cyrus-sasl ) smartcard? ( >=app-emulation/libcacard-0.1.2 ) client? ( >=x11-libs/libXrandr-1.2 x11-libs/libX11 x11-libs/libXext >=x11-libs/libXinerama-1.0 x11-libs/libXfixes x11-libs/libXrender )
 DESCRIPTION=SPICE server and client.
 EAPI=5
 HOMEPAGE=http://spice-space.org/
@@ -10,4 +10,4 @@ RDEPEND=>=x11-libs/pixman-0.17.7 >=dev-libs/glib-2.22:2 media-libs/alsa-lib >=me
 SLOT=0
 SRC_URI=http://spice-space.org/download/releases/spice-0.12.4.tar.bz2
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	python-any-r1	06dec86544a782db0a4fd8a90092565d	python-utils-r1	3b392f7373bcc74b7c97ae0acd9ec0e6	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=2028f4303bf3ee3767d7e1b09a64b76d
+_md5_=a80c979180d8b585ae2ac3a62bef6f76
