@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( =dev-ruby/activemodel-4*[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( test? ( =dev-ruby/actionpack-4*[ruby_targets_ruby19] =dev-ruby/activerecord-4*[ruby_targets_ruby19] dev-ruby/mocha[ruby_targets_ruby19] dev-ruby/sqlite3[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
+DESCRIPTION=Protect attributes from mass-assignment in ActiveRecord models
+EAPI=5
+HOMEPAGE=https://github.com/rails/protected_attributes
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 test test
+KEYWORDS=~amd64
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( =dev-ruby/activemodel-4*[ruby_targets_ruby19] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 )
+SLOT=1
+SRC_URI=https://github.com/rails/protected_attributes/archive/v1.0.3.tar.gz -> protected_attributes-1.0.3.tar.gz
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=de03595da3361b78f9a0a8a8870bb2d4
