@@ -1,6 +1,6 @@
 ####################################################################
 
-# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.15145 2013/10/09 04:00:22 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/package.mask,v 1.15146 2013/10/09 05:31:16 mgorny Exp $
 #
 # When you add an entry to the top of this file, add your name, the date, and
 # an explanation of why something is getting masked. Please be extremely
@@ -69,22 +69,6 @@ sys-firmware/amd-ucode
 # temporarily disabled as it also breaks s390 keywording
 #<net-nds/openldap-2.4.35
 
-# Michał Górny <mgorny@gentoo.org> (21 Sep 2013)
-# Mask multilib versions of OpenGL packages for testing.
-=app-emulation/emul-linux-x86-opengl-20130224-r1
-=dev-libs/wayland-1.2.1-r1
-=media-libs/freeglut-2.8.1-r1
-=media-libs/glew-1.10.0-r2
-=media-libs/glu-9.0.0-r1
-=media-libs/mesa-9.2.0-r1
-=virtual/glu-9.0-r1
-=virtual/opencl-0-r4
-=virtual/opengl-7.0-r1
-=x11-libs/libdrm-2.4.46-r1
-=x11-proto/dri2proto-2.8-r1
-=x11-proto/glproto-1.4.16-r1
-=x11-proto/xf86driproto-2.1.1-r1
-
 # Ian Stakenvicius <axs@gentoo.org> (20 Sep 2013)
 # on behalf of mozilla@gentoo.org
 # Severely outdated, no interest in maintaining,
@@ -93,7 +77,6 @@ sys-firmware/amd-ucode
 # See bug #442122 for discussion
 # Masked for removal in 30 days
 www-plugins/mozplugger
-
 
 # Michael Sterrett <mr_bones_@gentoo.org> (19 Sep 2013)
 # Old nasty gtk+-1-using things.
