@@ -1,0 +1,11 @@
+# ChangeLog for dev-ruby/protected_attributes
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/protected_attributes/ChangeLog,v 1.1 2013/10/09 05:15:49 graaff Exp $
+
+*protected_attributes-1.0.3 (09 Oct 2013)
+
+  09 Oct 2013; Hans de Graaff <graaff@gentoo.org>
+  +protected_attributes-1.0.3.ebuild, +metadata.xml:
+  Initial import for Rails 4. This code was extracted into a separate package
+  from Rails 3. It is also a dependency for dev-ruby/fast_gettext.
+
