@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8286 2013/10/09 04:00:22 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8287 2013/10/09 05:31:16 mgorny Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  09 Oct 2013; Michał Górny <mgorny@gentoo.org> package.mask:
+  Finally unmask multilib OpenGL.
 
   09 Oct 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> package.mask:
   Roll chromium dev channel masks for chromium-32.x.
