@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/spice
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice/ChangeLog,v 1.55 2013/09/16 02:37:18 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice/ChangeLog,v 1.56 2013/10/09 05:24:36 mgorny Exp $
+
+  09 Oct 2013; Michał Górny <mgorny@gentoo.org> spice-0.12.3-r1.ebuild,
+  spice-0.12.4.ebuild:
+  Improve Python dependencies using python-any-r1, bug #487352.
 
   16 Sep 2013; Mike Gilbert <floppym@gentoo.org> spice-0.12.3-r1.ebuild,
   spice-0.12.4.ebuild:
